@@ -181,7 +181,7 @@ def invalidate_on_version_change(basedir):
     verfile.write(ExtDB.VERSION)
 
 class ExtDB:
-    VERSION = "3"
+    VERSION = "4"
     name = "root/pypi"
     ixconfig = dict(bases=(), volatile=False, type="mirror")
 
